Fix clear filters btn aligning

--- a/src/ui/ClearFiltersButton/_ClearFiltersButton.scss
+++ b/src/ui/ClearFiltersButton/_ClearFiltersButton.scss
@@ -1,6 +1,5 @@
 .clear-filters-button {
   height: 20px;
-  margin-bottom: 8px;
   cursor: pointer;
 }
 
